--- a/edtech_site/edtech_app/templates/includes/navbar.html
+++ b/edtech_site/edtech_app/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
-<nav class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar" style="background-color: #198754;">
+<nav class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar" style="background-color:#fff;">
   <div class="container-fluid ">
-    <a class="navbar-brand px-4 text-white font-weight-light" href="#">
+    <a class="navbar-brand px-4  font-weight-light" href="#" style="color:green">
       Communité Minimalist
     </a>
     {% if user.is_authenticated %}
