--- a/edtech_site/edtech_app/templates/includes/scripts.html
+++ b/edtech_site/edtech_app/templates/includes/scripts.html
@@ -1,11 +1,9 @@
 {% load static %}
 
 <script src="{% static 'assets/js/sidebar.js' %}"></script>
-<script src="{% static 'assets/js/video_likes.js' %}"></script>
-
 <script src="https://www.paypal.com/sdk/js?client-id=AbiFRXC_E7xj5h3XYzCqeKhuupRUEmS3gMlhheFt1oGYdGGCAil-fCLrtmG_A8fjcKptsX7M3mJ99jqN"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
 
