--- a/edtech_site/edtech_app/templates/student/home/landing_page.html
+++ b/edtech_site/edtech_app/templates/student/home/landing_page.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="center">
-        <a class="btn" href="{% url 'login' %}" style="background-color:#0f6148 ; color:#eeeeee; border-radius: 15px;margin: 5px;"><b>Apprendre</b></a>
+        <a class="btn" href="{% url 'financiement:offer_list' %}" style="background-color:#0f6148 ; color:#eeeeee; border-radius: 15px;margin: 5px;"><b>Apprendre</b></a>
         <a class="btn" href="{% url 'teacher' %}" style="background-color:#0f6148 ; color: #eeeeee;border-radius: 15px;margin: 5px;"><b>Enseigner</b></a>
         <a class="btn" href="{% url 'blog' %}" style="background-color:#0f6148 ;color: #eeeeee; border-radius: 15px;margin: 5px;"><b>Communité minimaliste</b></a>
 
